first 8 steps done

--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
     - The freeCodeCamp Team
 
     -->
+
+    <h1 id="title"> Microverse test form</h1>
+    <p id="description"> This is part of the Microverse trials</p>
+
+    <form action="" id="survey-form" >
+      <label> name
+        <input type="text" name="name" id="name" required>
+      </label>
+      <label > email 
+        <input type="email" name="email" id="email" required>
+      </label>
+      <label > numero
+        <input type="number" required id="number"> 
+      </label>
+
+    </form>
+
     <script  src="js/index.js"></script>
   </body>
 </html>
